# unpipc

./: CMakeLists.txt  README.md  main.cpp  unpipc.h
doors/: client1.c
lib/: error.c
lock/: fcntltest  fcntltest.c  lockopen.c  locksvsem.c  test2.c
mutex/: prodcons2.c  prodcons3.c  prodcons6.c
my_pxsem_fifo/: sem_close.c  sem_open.c  semaphore.h
my_rwlock/: pthread_rwlock.h  pthread_rwlock_destroy.c  pthread_rwlock_init.c  pthread_rwlock_rdlock.c  pthread_rwlock_tryrdlock.c  pthread_rwlock_trywrlock.c  pthread_rwlock_unlock.c  pthread_rwlock_wrlock.c
my_rwlock_cancel/: pthread_rwlock_rdlock.c  pthread_rwlock_wrlock.c
pxmsg/: mqcreate  mqcreate.c  mqcreate1  mqcreate1.c  mqgetattr  mqgetattr.c  mqnotifysig1.c  mqreceive.c  mqsend.c  mqsysconf  mqsysconf.c  mqunlink  mqunlink.c
pxsem/: prodcons1.c  prodcons2.c  semcreate  semcreate.c  semgetvalue  semgetvalue.c  sempost  sempost.c  semsysconf  semsysconf.c  semunlink  semunlink.c  semwait  semwait.c
pxshm/: shmcreate.c  shmunlink.c  shmwrite.c
second/fifocliserv/: mainclient.c
second/pipe/: fduplex  (+7 more)
shm/: incr3.c  incrl  incrl.c  incrl2  incrl2.c
svmsg/: ctl  ctl.c  msgcreate  msgcreate.c  msgrcv  msgrcv.c  msgrmid  msgrmid.c  msgsnd  msgsnd.c  slot  slot.c
svmsgcliserv/: client.c  client_main.c  mesg.h  server.c  server_main.c  svmsg.h
svmsgmpxlq/: server_main.c
svsem/: semcreate  semcreate.c  semgetvalues  semgetvalues.c  semops  semops.c  semrmid  semrmid.c  semsetvalues  semsetvalues.c
svshm/: limits  limits.c  shmget  shmget.c  shmread  shmread.c  shmrmid  shmrmid.c  shmwrite  shmwrite.c
(+4 files in other folders)
